
	* man/sawfish.texi: added section to info file [Luis Rodrigo Gallardo Cruz]

	* scripts/Makefile.in: also expand REP_ENVIRON here [Luis Rodrigo Gallardo Cruz]

	* lisp/sawfish/wm/commands/move-resize.jl: change cursor to hand2 on move
	                                           change cursor to crosshair on resize

	* OPTIONS: small update

2009-09-14  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/ext/match-window.jl: string change in rename-window
	                                       improved keymap-trans
					       renamed rename-window to rename-window-func
					       fixed a glitch in rename-window-func

	* OPTIONS: small update

2009-09-13  Christopher Bratusek <zanghar@freenet.de>
	* sawfish.doap: added

	* lisp/sawfish/wm/commands/user.jl: added display-workspace-name
	                                    clipboard-preview-clip-length is now a defcustom
					    clipboard-preview-timeout is now a defcustom

	* OPTIONS
	* man/news.texi: updated

2009-09-12  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/focus.jl: doc for focus-revert
	                            indention improvements
				    -- [Teika Kazura]
	
	* man/news.texi: major rewrite of 1.5.0 section [Teika Kazura]
	                 updated

	* sawfish.desktop
	* sawfish-session.desktop
	* lisp/sawfish/wm/commands/viewport-extras.jl
	* man/news.texi
	* themes/Crux/README.gl
	* themes/absolute-e/README.ja
	* themes/brushed-metal/README.ja
	* themes/brushed-metal/README.pl
	* themes/gradient/README.gl
	* themes/gradient/README.ja
	* themes/gradient/README.pl
	* themes/gtk/README.gl
	* themes/gtk/README.ja
	* themes/gtk/README.pl
	* themes/microGUI/README.gl
	* themes/microGUI/README.it
	* themes/microGUI/README.ja
	* themes/microGUI/README.pl
	* themes/mono/README.gl
	* themes/mono/README.ja
	* themes/mono/README.pl
	* themes/simple/README.gl
	* themes/simple/README.ja
	* themes/simple/README.pl
	* themes/smaker/README.it
	* themes/smaker/README.ja