@@ -157,6 +157,8 @@ your system, but the later doesn't
 
 @item Updated OPTIONS [Christopher Bratusek]
 
+@item Added man-pages for sawfish, sawfish-client and sawfish-ui [Debian]
+
 @item Added section to sawfish info-file [Luis Rodrigo Gallardo Cruz]
 
 @item Added new contributors to @code{THANKS} section of @code{CONTRIBUTING} [Christopher Bratusek]
