@@ -10,6 +10,17 @@
 
 	* OPTIONS: small update
 
+	* man/sawfish.1
+	* man/sawfish-client.1
+	* man/sawfish-ui.1: added man-page for sawfish 
+	                 added man-page for sawfish-client
+			 added man-page for sawfish-ui
+			 -- [Debian]
+
+	* man/Makefile.in: actually build FAQ
+	                   removed sawfish.dvi target
+			   removed sawfish.ps target
+
 2009-09-14  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/ext/match-window.jl: string change in rename-window
 	                                       improved keymap-trans
